--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
-    "sourceType": "module",
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   // HERE
@@ -14,7 +14,7 @@
     "no-undef":"error",
     "no-unused-expressions":"error",
     "no-unreachable":"error",
-    "consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
 
   "env": {
